# covenant

./: .gitignore  Cargo.toml  README.md
.claude/: CLAUDE.md
.claude/commands/: archive.md
crates/covenant-checker/: Cargo.toml
crates/covenant-cli/: Cargo.toml
crates/covenant-codegen/: Cargo.toml
crates/covenant-codegen/src/: data_graph.rs  gai_codegen.rs  lib.rs  snippet_wasm.rs
crates/covenant-codegen/tests/: data_graph_integration.rs  pure_functions.rs
crates/covenant-optimizer/: Cargo.toml
crates/covenant-optimizer/src/: lib.rs
crates/covenant-optimizer/src/analysis/: reachability.rs  usage.rs
crates/covenant-optimizer/src/passes/: constant_fold.rs  mod.rs
crates/covenant-requirements/: Cargo.toml
crates/covenant-runtime/: Cargo.toml
crates/covenant-runtime/src/: error.rs  lib.rs  mutation.rs  query.rs  store.rs  types.rs
docs/: LFM-2.5-PROMPTS.md
docs/design/: COMPILER.md  DESIGN.md  GRAPH_DB_ANALYSIS.md  PERFORMANCE.md  PRESSURE_TEST_USE_CASES.md  QUERY_SEMANTICS.md  REMAINING_PHASES_PLAN.md  RUNTIME_IMPORTS.md  WASI_INTEGRATION.md  grammar.ebnf
docs/guide/: embedded-queries.md
docs/specs/: llm-code-generation.md
examples/: 21-structured-concurrency.cov  23-platform-abstraction.cov  24-cross-platform-storage.cov  25-text-operations.cov  30-doc-ingestion.cov  README.md
examples/error-handling/: error-handling.cov
examples/file-io/: file-io.cov
examples/http-server/: http-server.cov
examples/json/: build.cov  parse.cov  (+1 more)
scripts/: build-query-examples.sh
tests/: README.md  compiler_integration.rs  parse_all_examples.rs
(+58 files in other folders)
