[package]
name = "covenant-codegen"
version.workspace = true
edition.workspace = true

[dependencies]
covenant-ast = { workspace = true }
covenant-checker = { workspace = true }
covenant-parser = { workspace = true }
wasm-encoder = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
wasmtime = { workspace = true }
