[package]
name = "covenant-optimizer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "IR optimization passes for Covenant compiler"

[dependencies]
covenant-ast = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
covenant-parser = { workspace = true }
